--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,5 +1,7 @@
 FROM stencila/executa-midi@sha256:aaa5b49ae2787807df663b7d56cbd0c513b54fdcca421593c70f631f802b7f1b
 
 USER root
-RUN Rscript -e 'install.packages(c("pheatmap"))'
+RUN echo "r <- getOption('repos'); r['CRAN'] <- 'http://cran.us.r-project.org'; options(repos = r);" > ~/.Rprofile
+RUN Rscript -e "source('http://bioconductor.org/biocLite.R');biocLite(c('limma','GSA','Biobase','edgeR','locfit'))"
+RUN Rscript -e "install.packages(c('pheatmap','RColorBrewer','gProfileR','RJSONIO','httr'))"
 USER guest
